--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Left click to sweep. Right click to flag. Flag all the mines!
+		    Left click to sweep. Right click to flag. Refresh the page to restart the game. Flag all the mines!
 	    </footer>
 	</body>
 </html>
